# modelViewer

./: .gitignore  CMakeLists.txt  main.cpp
include/: mainwindow.h
include/app/: application.h
include/drawer/: basedrawer.h  qtdrawer.h
include/exceptions/: readexception.h
include/model/: basemodel.h  carcasemodel.h  face.h  vertice.h
include/modifier/: Modifier.cpp  Modifier.h
include/parser/: baseparser.h  carcasemodelparser.h
include/reader/: basereader.h  filereader.h
include/tools/: array.h  matrix.h
qrc/: res.qrc
src/: mainwindow.cpp
src/app/: application.cpp
src/drawer/: qtdrawer.cpp
src/model/: Modifier.cpp  carcasemodel.cpp
src/parser/: baseparser.cpp  carcasemodelparser.cpp
src/reader/: filereader.cpp
uis/: mainwindow.ui
